# dorna_arm_ros

./: README.md
dorna_control/: CMakeLists.txt  README.md  package.xml
dorna_control/config/: dorna_control.yaml
dorna_control/launch/: dorna_control.launch
dorna_description/: CMakeLists.txt  README.md  package.xml
dorna_description/launch/: dorna.rviz  dorna_rviz.launch
dorna_description/meshes/: 1_finger_tool.stl  2_finger_tool.stl  base_v8.stl  j0_c.stl  j1_c.stl  j2_c.stl  j3_c.stl  j4_c.stl
dorna_description/urdf/: dorna.gazebo  dorna.gv  dorna.urdf  dorna.urdf.xacro  effort_transmission.macro.xacro  link.macro.xacro  model.config  position_transmission.macro.xacro
dorna_gazebo/: CMakeLists.txt  README.md  package.xml
dorna_gazebo/launch/: dorna.launch  gazebo.launch
dorna_gazebo/worlds/: dorna.world
dorna_moveit_config/: CMakeLists.txt  LICENSE  README.md  package.xml
dorna_moveit_config/config/: controllers.yaml  dorna.srdf  dorna_real_controllers.yaml  fake_controllers.yaml  joint_limits.yaml  joints_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
dorna_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  dorna_moveit_controller_manager.launch.xml  dorna_planning_execution.launch  dorna_real_moveit_controller_manager.launch.xml  dorna_real_planning_execution.launch  fake_moveit_controller_manager.launch.xml  move_group.launch  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
dorna_nodes/: CMakeLists.txt  README.md  package.xml
dorna_nodes/src/: DornaUtils.py  dorna_moveit_gazebo.py  dorna_moveit_real.py  dorna_moveit_ros.cpp  dorna_simple_control.py  draw_heart_thetas.p  moveit_scene_service.py
dorna_ros/: 99-dorna-udev.rules  CMakeLists.txt  README.md  dorna_udev_install.sh  package.xml
dorna_ros/cfg/: Dorna.cfg
dorna_ros/config/rviz/: dorna_moveit_rviz_config.rviz  dorna_rviz_config.rviz
dorna_ros/launch/: dorna_api.launch  dorna_bd_test.launch  dorna_pp_test.launch  dorna_ros.launch  rbot_dorna.launch
dorna_ros/msg/: DornaGoal.msg  DornaHomed.msg  DornaInfo.msg  DornaJerk.msg  DornaJob.msg  DornaJoint.msg  DornaLimits.msg  DornaMotion.msg  DornaPos.msg  DornaSpeed.msg  DornaToolHead.msg  DornaUnits.msg  Job.msg
dorna_ros/src/: config.yaml  dorna_cmd_utils.py  dorna_enums.py  dorna_exceptions.py  dorna_robot.py  dorna_ros_node.py  dorna_tool_head.py  human_ros.py
dorna_ros/srv/: DornaDisconnect.srv  DornaErase.srv  DornaExecute.srv  DornaHome.srv  DornaJog.srv  DornaMoveJoints.srv  DornaMoveXYZ.srv  DornaOutputPin.srv  DornaPlanCmd.srv  DornaPlay.srv  DornaSet.srv  DornaXYZ.srv  DornaXYZCheck.srv  DornaXYZtoJoint.srv  HumanOpCmd.srv  TfTransform.srv
