<?xml version="1.0"?>
<package>
  <name>dorna_control</name>
  <version>0.0.0</version>
  <description>The dorna_control package</description>

  <maintainer email="mitchell.fogelson@rakuten.com">Mitchell Fogelson</maintainer>

  <license>BSD</license>

  <author email="mitchell.fogelson@rakuten.com">Mitchell Fogelson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>controller_manager</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>

  <run_depend>rqt_gui</run_depend>
  <run_depend>effort_controllers</run_depend>


  <export>
  </export>

</package>
