<package>
  <name>dorna_gazebo</name>
  <version>0.1.0</version>
  <description>dorna_gazebo</description>
  <maintainer email="mitchell.fogelson@rakuten.com">Mitchell Fogelson</maintainer>

  <license>BSD</license>


  <author email="mitchell.fogelson@rakuten.com">Mitchell Fogelson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dorna_description</build_depend>
  <build_depend>dorna_control</build_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>dorna_description</run_depend>
  <run_depend>dorna_control</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
