<package>
  <name>dorna_gazebo</name>
  <version>0.0.0</version>
  <description>dorna_gazebo</description>
  <maintainer email="mfogelson630@gmail.com">Mitchell Fogelson</maintainer>

  <license>MIT</license>


  <author email="mfogelson630@gmail.com">Mitchell Fogelson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>dorna_description</build_depend>
  <build_depend>dorna_control</build_depend>

  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>dorna_description</run_depend>
  <run_depend>dorna_control</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
