<?xml version="1.0"?>
<package>
  <name>dorna_ros</name>
  <version>0.0.1</version>
  <description>The dorna_ros package</description>

  <maintainer email="mfogelson630@gmail.com">Mitchell Fogelson</maintainer>

  <license>MIT</license>

  <author email="mfogelson630@gmail.com">Mitchell Fogelson</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
  </export>

</package>
